--- a/catalog.html
+++ b/catalog.html
@@ -45,10 +45,10 @@
               
               <ul class="sorting-list-appearing">
                   <li class="arrow sorting-item-active">
-                      <button type="button"><img src="http://placehold.it/11x10"></button>
+                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-up"></button>
                   </li>
                   <li class="arrow">
-                      <button type="button"><img src="http://placehold.it/11x10"></button>
+                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-down"></button>
                   </li>
               </ul>
           </section>
@@ -60,7 +60,7 @@
                       <h3><a href="catalog-item.html">Sedona</a></h3>
                       <p class="template-description">Информационный сайт  для туристов</p>
                       <p class="template-image">
-                          <img src="http://placehold.it/360x576">
+                          <img src="http://placehold.it/360x576" alt="Sedona" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
