--- a/catalog.html
+++ b/catalog.html
@@ -45,10 +45,10 @@
               
               <ul class="sorting-list-appearing">
                   <li class="arrow sorting-item-active">
-                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-up"></button>
+                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-up" width="11" height="10"></button>
                   </li>
                   <li class="arrow">
-                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-down"></button>
+                      <button type="button"><img src="http://placehold.it/11x10" alt="icon-down" width="11" height="10"></button>
                   </li>
               </ul>
           </section>
