Базовая стилизация личного проекта
(Commit 10) Подключил нестандартный шрифт, добавил и подключил normalize.css, style.css,  перезалил лого партнеров. Сделал мелкие исправления в HTML-коде для удобства стилизации.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
   </head>
   <body>  
       
@@ -14,7 +17,7 @@
               <ul class="site-navigation"> 
                   <li><a href="studio.html">студия</a></li> 
                   <li><a href="clientele.html">клиенты</a></li> 
-                  <li><a class="site-navigation-current" href="catalog.html">магазин</a></li> 
+                  <li><a href="catalog.html">магазин</a></li> 
                   <li><a href="contacts.html">контакты</a></li>
               </ul> 
               <ul class="user-navigation">
@@ -28,7 +31,7 @@
               <!-- Активный слайд -->
               <div class="slide-1"> 
                   <h2>Долго, дорого, скрупулезно.</h2> 
-                  <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p> 
+                  <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
                   <p><a class="button" href="#">узнать больше</a></p> 
               </div>
               <!-- Неактивны. Появляются при перелистывании -->
@@ -51,17 +54,17 @@
                   <li> 
                       <h3>Вебсайты</h3> 
                       <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p> 
-                      <a class="button" href="#">заказать</a> 
+                      <a class="button color-red" href="#">заказать</a> 
                   </li>
                   <li> 
                       <h3>Приложения</h3> 
                       <p>Покорите топ-10 приложений в AppStore и Google Play</p> 
-                      <a class="button" href="#">заказать</a> 
+                      <a class="button color-green" href="#">заказать</a> 
                   </li>
                   <li> 
                       <h3>Презентации</h3> 
                       <p>Вы даже не подозреваете, насколько вы изумительны! </p> 
-                      <a class="button" href="#">заказать</a> 
+                      <a class="button color-yellow" href="#">заказать</a> 
                   </li> 
               </ul> 
           </section> 
@@ -130,7 +133,7 @@
                   </div> -->
               
               <div class="contacts"> 
-                  <p>NЁRDS DESIGN STUDIO</p> 
+                  <p class="contacts-title">NЁRDS DESIGN STUDIO</p> 
                   <p>191186, Санкт-Петербург,<br>  ул. Б. Конюшенная, д. 19/8</p> 
                   <p>тел. +7 (812) 275-75-75</p> 
               </div>
