Базовая стилизация личного проекта (Исправленная версия)
(Commit 11) Убрал временный outline: none; для всех focus,
исправил шрифты,  исправил шрифт и цвет текста в textarea, исправил ошибки в catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -123,61 +123,61 @@
               <h2 class="visually-hidden">Шаблоны страниц</h2>
               <ul class="template-list">
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                              <h3>Sedona</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">Sedona</a>
+                      </h3>
                       <p class="template-description">Информационный сайт  для туристов</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-sedona.jpg" alt="Sedona" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                              <h3>Pink App</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">Pink App</a>
+                      </h3>
                       <p class="template-description">Продуктовый лендинг приложения для iOS и Android</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-pink.jpg" alt="Pink App" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                              <h3>Barbershop</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">Barbershop</a>
+                      </h3>
                       <p class="template-description">Сайт салона красоты. Для мужчин, да.</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-barbershop.jpg" alt="Barbershop" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                              <h3>Mishka</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">Mishka</a>
+                      </h3>
                       <p class="template-description">Интернет-магазин  вязаных игрушек</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-mishka.jpg" alt="Mishka" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                              <h3>A Plus</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">A Plus</a>
+                      </h3>
                       <p class="template-description">Лендинг курсов повышения квалификации</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-aplus.jpg" alt="A Plus" width="360" height="576">
                       </p>
                   </li>
                   <li class="template-item">
-                      <a href="catalog-item.html">
-                          <h3>Кваст</h3>
-                      </a>
+                      <h3>
+                          <a href="catalog-item.html">Кваст</a>
+                      </h3>
                       <p class="template-description">Промо-сайт производителя крафтового кваса</p>
-                      <span class="price">900 руб.</span>
+                      <span class="price">9 900 руб.</span>
                       <p class="template-image">
                       <img src="img/img-kvast.jpg" alt="Кваст" width="360" height="576">
                       </p>
