--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="left"> 
                   <p><b>Мы — маленькая, но гордая дизайн-студия из Краснодара. </b></p> 
                   <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p> 
-                  <p>Выполняем заказы на разработку:</p> 
+                  <p class="bold">Выполняем заказы на разработку:</p> 
                   <ul class="orders"> 
                       <li>Веб-сайтов любой сложности</li> 
                       <li>Мобильных приложений для iOS и Android</li> 
@@ -152,7 +152,7 @@
                       </p>
                       <p>
                           <label for="write-us-form-text">Текст письма:</label><br>
-                          <textarea name="text" id="write-us-form-text" >В свободной форме</textarea>
+                          <textarea name="text" id="write-us-form-text">В свободной форме</textarea>
                       </p>
                       
                       <h3 class="visually-hidden">Кнопка отправки формы</h3>
@@ -170,7 +170,7 @@
                   <p><b>Давайте дружить, это выгодно!</b></p> 
                   <p>Скидка 10% для друзей из социальных сетей.</p> 
               </div> 
-              <ul style="background-color: lightgray;" class="social-media"> <!-- Фон временный --> 
+              <ul class="social-media"> 
                   <li><a href="#"><img src="img/vk-icon.svg" alt="vk" width="26" height="15"></a></li> 
                   <li><a href="#"><img src="img/fb-icon.svg" alt="facebook" width="12" height="22"></a></li>  
                   <li><a href="#"><img src="img/insta-icon.svg" alt="instagram" width="21" height="21"></a></li> 
