Базовая стилизация личного проекта(Окончательная версия)
Добавил textarea placeholder

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       </p>
                       <p>
                           <label for="write-us-form-text">Текст письма:</label><br>
-                          <textarea name="text" id="write-us-form-text">В свободной форме</textarea>
+                          <textarea name="text" id="write-us-form-text" placeholder="В свободной форме"></textarea>
                       </p>
                       
                       <h3 class="visually-hidden">Кнопка отправки формы</h3>
