Сетка личного проекта на флексах (исправленная версия)
Убрал ненужные min-height, подкорректировал отступы на соответствие макету, <b> в HTML изменил на заголовки, стилизовал пагинатор в каталоге.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <section class="studio"> 
               <h2 class="visually-hidden">Преимущества</h2> 
               <div class="left"> 
-                  <p><b>Мы — маленькая, но гордая дизайн-студия из Краснодара. </b></p> 
+                  <h3>Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3> 
                   <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p> 
-                  <p class="bold">Выполняем заказы на разработку:</p> 
+                  <h4>Выполняем заказы на разработку:</h4> 
                   <ul class="orders"> 
                       <li>Веб-сайтов любой сложности</li> 
                       <li>Мобильных приложений для iOS и Android</li> 
@@ -87,7 +87,7 @@
               </div> 
               <div class="right"> 
                   <img src="img/nerds-illustration.png" width="360" height="208" alt="Нёрдс иллюстрация"> 
-                  <p class="bold">с 2004 года Любим точность во всем:</p>
+                  <h4>с 2004 года Любим точность во всем:</h4>
                   
                   <ul class="percent">
                       <li>
