Декоративные элементы личного проекта
Со слайдером

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
       <main class="container"> 
           <section class="top-slider">
               <div class="top-slider-container"><!-- Дополнительный контейнер-центровщик -->
+                  <div class="container-centering">
+                      <div class="slider-controls">
+                          <i class="active"></i>
+                          <i></i>
+                          <i></i>
+                      </div>
+                  </div> 
                   <!-- Активный слайд -->
                   <div class="slide slide-1"> 
                       <h2>Долго, дорого,<br>скрупулезно.</h2> 
