Итоговый проект Нердс (с исправлениями)
Исправления по критериям Б4 , Б10, Б12, Б14, Б15.

--- a/catalog.html
+++ b/catalog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link type="text/css" rel="stylesheet" href="css/style.css">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Нёрдс</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+    </head>
   <body class="inner-page">
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p> -->
@@ -222,7 +222,7 @@
             <div class="map-wrapper"><!-- Обертка для карты и блока "Контакты" -->
                 <!-- Все же карта в данном случае - контентное изображение, как мне кажется. Если не подключится ни JS ни CSS, пользователь должен видеть, где находится студия. Поэтому вставил: -->
                 <div class="map">
-                    <img src="img/group-map.jpg" width="1440" height="416" alt="Мы здесь.">
+                    <img src="img/map.jpg" width="1440" height="416" alt="Мы здесь.">
                 </div>
             
                 <div class="map-interactive">
